--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
       보아르 &gt; 캠핑/가정용 400W 미니멀 전기히터 VO-HT015 (안전장치기능탑재) |
       내일의집
     </title>
+    <!--//파비콘-->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#3da5f5" />
+    <meta name="msapplication-TileColor" content="#9f00a7" />
+    <meta name="theme-color" content="#ffffff" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,6 +26,7 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    테스트테스트테스트테스트테스트테스트
+    테스트테스트테스트테스트테스트
+    <i class="ic-bell" aria-label="검색"></i>
   </body>
 </html>
