--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <div class="avatar-24">
           <img src="./assets/images/img-user-01.jpg" alt="아바타" />
         </div>
+
         <div>
           <div class="star-rating-13">
             <i class="ic-star is-active"></i>
@@ -69,6 +70,24 @@
             <i class="ic-star is-active"></i>
           </div>
         </div>
+      </div>
+
+      <div>
+        <div class="price-16">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-20">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-32">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
+        </div>
+        <div class="price-off">
+          <strong class="amount">40,000</strong>
+          <span class="currency">원</span>
         </div>
       </div>
     </div>
